[package]
name = "tychonet-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bigdecimal = "0.4"
config = { version = "0.14", default-features = false, features = ["toml"] }
num-format = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

everscale-types = { git = "https://github.com/broxus/everscale-types.git", default-features = false, features = [
    "tycho",
    "models",
    "base64",
    "serde",
] }
