[package]
name = "tychonet-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bigdecimal = "0.4"
bytes = "1.4"
dotenvy = "0.15.7"
humantime = "2.1"
num-format = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
similar = "2.5"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

everscale-types = { git = "https://github.com/broxus/everscale-types.git", default-features = false, features = [
    "tycho",
    "models",
    "base64",
    "serde",
] }

[dev-dependencies]
tempfile = "3.13.0"
